RESOLVED FIXED314876
[UIIntelligenceSupport] Focused contentEditable elements aren't marked as focused in output items
https://bugs.webkit.org/show_bug.cgi?id=314876
Summary [UIIntelligenceSupport] Focused contentEditable elements aren't marked as foc...
Wenson Hsieh
Reported 2026-05-14 23:09:27 PDT
Attachments
Wenson Hsieh
Comment 1 2026-05-14 23:14:04 PDT
EWS
Comment 2 2026-05-15 06:07:37 PDT
Committed 313308@main (32bb5fa0c6bf): <https://commits.webkit.org/313308@main> Reviewed commits have been landed. Closing PR #64977 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.