[UIIntelligenceSupport] Focused contentEditable elements aren't marked as focused in output items https://bugs.webkit.org/show_bug.cgi?id=314876 rdar://177120265

Reviewed by Richard Robinson.

Add some missing logic to mark focused contenteditable elements (excluding form controls) as such,
in the extracted `TextExtraction::Editable` metadata, along with the accessibility label (if
present).

Tests: fast/text-extraction/contenteditable-text-extraction.html

* LayoutTests/fast/text-extraction/contenteditable-text-extraction-expected.txt: Added.
* LayoutTests/fast/text-extraction/contenteditable-text-extraction.html: Added.
* Source/WebCore/page/text-extraction/TextExtraction.cpp:
(WebCore::TextExtraction::normalizedLabelText):

Move this helper method farther up in the file, so that we can reuse it in `extractItemData`.

(WebCore::TextExtraction::extractItemData):

Canonical link: https://commits.webkit.org/313308@main